--- a/01_Trivix_EduHub/css/style.css
+++ b/01_Trivix_EduHub/css/style.css
@@ -58,7 +58,7 @@ li {
   --para-color: #504e4d;
   --bnt-hover-bg-color: #003b99;
   --btn-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  --footer-bg-color: #040d12;
+  --footer-bg-color: #0b5983;
   --trivix-logo-bg-color: #3d86fa;
 }
 
@@ -463,6 +463,7 @@ main {
 
   .grid {
     padding-top: 0rem;
+    padding-bottom: 0rem;
   }
 
   .choose-left--div {
@@ -586,10 +587,13 @@ main {
 
 .contact-section-homepage {
   background-color: var(--bg-color);
-  margin-bottom: 2rem;
 
   .container {
-    padding: 3rem 2rem 3rem 3rem;
+    background-color: var(--bg-color);
+    position: relative;
+    bottom: -13rem;
+    z-index: 50;
+    padding: 4rem 2rem 3rem 3rem;
     border-radius: 0.8rem;
     width: 60%;
     height: auto;
@@ -649,3 +653,49 @@ main {
 }
 
 /* contact section homepage ends here */
+
+/* footer starts here */
+
+.section-footer {
+  background-color: var(--footer-bg-color);
+  color: var(--white-color);
+  padding-top: 16rem;
+  z-index: -1;
+
+  .container {
+    padding: 2rem 0 4rem 0;
+
+    .footer-div-1 {
+      h2 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        color: var(--white-color);
+        padding: 1.5rem 0 0rem 0;
+      }
+
+      .footer-para {
+        padding: 0 0 2rem 0;
+      }
+
+      .fa-discord {
+        color: #5865f2; /* Discord brand color */
+      }
+
+      .fa-linkedin {
+        color: #0077b5; /* LinkedIn brand color */
+      }
+
+      .fa-instagram {
+        color: #e4405f; /* Instagram brand color */
+      }
+    }
+  }
+
+  .copyroght {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 2rem 0;
+  }
+}
+
+/* footer ends here */
