--- a/01_Trivix_EduHub/css/style.css
+++ b/01_Trivix_EduHub/css/style.css
@@ -20,7 +20,10 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+label,
+::placeholder,
+input {
   font-family: "Poppins", sans-serif;
 }
 
@@ -100,7 +103,7 @@ li {
 
 .btn {
   color: var(--white-color);
-  width: 25%;
+  min-width: 16rem;
   padding: 1rem 2rem;
   text-align: center;
   border: none;
@@ -175,6 +178,7 @@ li {
 /* layout starts here */
 .container {
   max-width: 140rem;
+
   margin: 0 auto;
   padding: 9rem 2.5rem;
 }
@@ -206,9 +210,9 @@ li {
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-  z-index: 50;
+  z-index: 100;
   position: fixed;
-  background-color: var(--bg-color);
+  background-color: var(--white-color);
 }
 
 .section-navbar .container {
@@ -443,7 +447,88 @@ main {
   }
 }
 
-/*course section starts here*/
+/*course section ends here*/
+
+/* Blog section starts here */
+
+.section-blog {
+  background-color: var(--bg-color);
+
+  .container {
+    padding: 6rem 0 2rem 0;
+  }
+
+  .grid {
+    gap: 8rem;
+  }
+
+  .section-common-heading {
+    font-size: 3rem;
+    text-align: center;
+  }
+
+  .section-common-para {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  .blog-div:hover {
+    transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
+  }
+
+  .blog-div {
+    border-radius: 1rem 1rem 0.5rem 0.5rem;
+    -webkit-border-radius: 1rem 1rem 0.5rem 0.5rem;
+    -moz-border-radius: 1rem 1rem 0.5rem 0.5rem;
+    -ms-border-radius: 1rem 1rem 0.5rem 0.5rem;
+    -o-border-radius: 1rem 1rem 0.5rem 0.5rem;
+
+    box-shadow: var(--btn-box-shadow);
+    .blog-image {
+      img {
+        border-radius: 1.5rem 1.5rem 0 0;
+        -webkit-border-radius: 1.5rem 1.5rem 0 0;
+        -moz-border-radius: 1.5rem 1.5rem 0 0;
+        -ms-border-radius: 1.5rem 1.5rem 0 0;
+        -o-border-radius: 1.5rem 1.5rem 0 0;
+        width: 100%;
+        aspect-ratio: 1.5;
+      }
+    }
+
+    .blog-content {
+      .blog-date-div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 02rem 3rem;
+
+        .fa-solid {
+          padding: 0;
+          background: transparent;
+          box-shadow: none;
+        }
+      }
+
+      h3 {
+        font-size: 2rem;
+        padding: 0 3rem 2rem 3rem;
+        font-weight: 500;
+      }
+    }
+  }
+}
+
+/* Blog section ends here */
 
 /*why choose section starts here*/
 .why-choose--section {
@@ -613,7 +698,6 @@ main {
       }
 
       button {
-        width: 40%;
         cursor: pointer;
 
         a {
@@ -663,7 +747,7 @@ main {
   z-index: -1;
 
   .container {
-    padding: 2rem 0 4rem 0;
+    padding: 2rem 2.3rem 4rem 2.3rem;
 
     .footer-div-1 {
       h2 {
@@ -699,3 +783,204 @@ main {
 }
 
 /* footer ends here */
+
+/* contact section start here */
+
+.section-footer--contact {
+  padding-top: 1rem;
+}
+
+.section-contact {
+  background-color: var(--bg-color);
+
+  .container {
+    padding: 6rem 0 2rem 0;
+  }
+
+  .grid {
+    gap: 8rem;
+    padding: 0 3rem;
+  }
+
+  form {
+    .grid {
+      padding: 0;
+    }
+  }
+
+  .section-common-heading {
+    font-size: 3rem;
+    text-align: center;
+  }
+
+  .section-common-para {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  .mb-3 {
+    margin-bottom: 3.2rem;
+  }
+
+  label {
+    display: block;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+  }
+
+  ::placeholder {
+    font-size: 1.5rem;
+  }
+
+  input,
+  textarea {
+    width: 100%;
+    padding: 0.8rem 2.4rem;
+    font-size: 1.7rem;
+  }
+
+  .btn-submit {
+    margin-bottom: 4rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
+  }
+
+  .google-map-div {
+    padding-bottom: 5rem;
+  }
+}
+
+/* contact section ends here */
+
+/* media queries statrts here - Responsive code*/
+
+@media (width <= 1380px) {
+  .grid-col--four {
+    grid-template-columns: repeat(auto-fit, minmax(260px, 350px));
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (width <= 1095px) {
+  .section-hero-content {
+    & .hero-heading {
+      font-size: 3rem;
+      font-weight: 800;
+      color: var(--hero-heading-color);
+    }
+  }
+
+  .contact-section-homepage {
+    & .container {
+      & .contact-content {
+        .contact-title {
+          font-size: 2rem;
+        }
+      }
+    }
+  }
+
+  .why-choose--section {
+    .grid {
+      grid-template-columns: 1fr;
+    }
+
+    .choose-left--div {
+      text-align: left;
+    }
+
+    .mobile-portrait {
+      img {
+        width: 60%;
+        border-radius: none;
+        -webkit-border-radius: none;
+        -moz-border-radius: none;
+        -ms-border-radius: none;
+        -o-border-radius: none;
+      }
+    }
+  }
+}
+
+@media (width <= 780px) {
+  .section-navbar .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 2rem;
+
+    ul li a {
+      font-size: 1rem;
+    }
+  }
+
+  .section-hero {
+    .section-hero-content {
+      margin-bottom: 10rem;
+    }
+
+    .btn-hero {
+      width: 5%;
+      a {
+        font-size: 1.5rem;
+      }
+    }
+
+    .grid {
+      grid-template-columns: 1fr;
+      position: relative;
+      padding-top: 2rem;
+      top: 16rem;
+
+      .section-hero-image {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        bottom: 2rem;
+
+        figure {
+          width: 50%;
+        }
+      }
+    }
+  }
+
+  .section-hero-content {
+    order: 2;
+    & .hero-subheading {
+      font-size: 2rem;
+    }
+
+    & .hero-heading {
+      font-size: 4rem;
+    }
+    & .hero-para {
+      text-align: justify;
+      padding-right: 6rem;
+      font-size: 1.5rem;
+      color: var(--white-color);
+    }
+  }
+
+  .section-about {
+    .grid {
+      grid-template-columns: repeat(1, minmax(250px, 1fr));
+    }
+  }
+
+  .why-choose--section {
+    & .choose-center--div {
+      span {
+        display: none;
+      }
+    }
+  }
+}
+
+/* media queries ends here */
