--- a/01_Trivix_EduHub/css/style.css
+++ b/01_Trivix_EduHub/css/style.css
@@ -455,7 +455,7 @@ main {
   background-color: var(--bg-color);
 
   .container {
-    padding: 6rem 0 2rem 0;
+    padding: 6rem 2rem 2rem 2rem;
   }
 
   .grid {
@@ -678,7 +678,7 @@ main {
     position: relative;
     bottom: -13rem;
     z-index: 50;
-    padding: 4rem 2rem 3rem 3rem;
+    padding: 4rem 4rem 3rem 4rem;
     border-radius: 0.8rem;
     width: 60%;
     height: auto;
@@ -794,7 +794,7 @@ main {
   background-color: var(--bg-color);
 
   .container {
-    padding: 6rem 0 2rem 0;
+    padding: 6rem 0 5rem 0;
   }
 
   .grid {
@@ -904,6 +904,28 @@ main {
       }
     }
   }
+
+  .section-contact {
+    .contact-content {
+      input[type="email"] {
+        padding-bottom: 1rem;
+      }
+      form {
+        .grid {
+          gap: 2.5rem;
+          grid-template-columns: 1fr;
+        }
+      }
+    }
+
+    .google-map-div {
+      height: 50rem;
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
 
 @media (width <= 780px) {
@@ -916,6 +938,7 @@ main {
 
     ul li a {
       font-size: 1rem;
+      font-weight: 900;
     }
   }
 
@@ -979,6 +1002,53 @@ main {
       span {
         display: none;
       }
+    }
+  }
+
+  .contact-section-homepage {
+    margin-top: -8rem;
+    .grid {
+      grid-template-columns: 1fr;
+    }
+    & .container {
+      width: 90%;
+      & .contact-content {
+        order: 1;
+        .contact-title {
+          font-size: 2rem;
+        }
+      }
+    }
+  }
+
+  .section-contact {
+    .container {
+      padding: 6rem 2rem 1rem 2rem;
+      gap: 0rem;
+    }
+
+    .contact-content {
+      .grid {
+        gap: 4rem;
+      }
+      input,
+      textarea {
+        width: 98%;
+      }
+    }
+
+    .google-map-div {
+      height: 50rem;
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .grid-col--two {
+      grid-template-columns: 1fr;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
